Añadidas notificaciones y errores al gulpfile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,7 @@ color: green;  // tablet
 color: blue;   // desktop
 */
 
-$mobile-text-color: white;
+$mobile-text-color: darkblue;
 
 h1 {
 	color: $mobile-text-color;
