--- a/src/scss/_html-tags.scss
+++ b/src/scss/_html-tags.scss
@@ -15,7 +15,27 @@ img, embed, object, video {
 // Forms
 form {
 	padding: 10px;
-
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	position: absolute;
+	background: $color-white;
+	width: 100%;
+	box-sizing: border-box;
+	top: 0px;
+	@include if-is-tablet {
+		height: auto;
+		position: relative;
+		flex-flow: row wrap;
+		div {
+			width: calc(50% - 10px);
+			margin: auto 5px;
+		}
+		button {
+			width: 20%;
+		}
+	}
 }
 
 label, input, button {
