Añadido icono para agregar canciones con transición. Añadido botón de favoritos. Añadido el hecho de obtener la lista de canciones del backend en lugar de tener una predefinida. Comprobación de posibles datos erroneos en el formulario (parsear HTML por ejemplo) Añadidos modulos para exportar (para recargar la lista de canciones despues de agregar una, por ejemplo)

--- a/src/scss/_songs-list.scss
+++ b/src/scss/_songs-list.scss
@@ -29,6 +29,14 @@
 				margin-bottom: 10px;
 			}
 		}
+		.favorite-button {
+			float: right;
+			margin: 20px 10px 0 0;
+			@include if-is-tablet {
+				float: none;
+				margin: 0px;
+			}
+		}
 		.artist {
 			margin-top: 15px;
 			font-weight: bold;
@@ -39,7 +47,9 @@
 			text-overflow: ellipsis;
 			overflow: hidden;
 			height: 16px;
-			padding-right: 20px;
+			@include if-is-tablet {
+				padding-right: 0px;
+			}
 		}
 	}
 }
