--- a/src/scss/_ui-states.scss
+++ b/src/scss/_ui-states.scss
@@ -6,6 +6,9 @@ body {
 
 	// Muestra el formulario
 	&.form-shown { 
+		.add-icon {
+			transform: rotate(45deg);
+		}
 		.new-song-form {
 			display: flex;
 		}
