--- a/src/scss/_web-header.scss
+++ b/src/scss/_web-header.scss
@@ -16,4 +16,12 @@ $web-header-color: $color-white;
 		font-size: $font-size-base + 5px;
 		text-shadow: 2px 2px 0px darken($web-header-background, 30%);
 	}
+	.add-icon {
+		float: right;
+		margin-right: 10px;
+		transition: transform 0.25s;
+	}
+	.add-icon:hover {
+		cursor: pointer;
+	}
 }
