Añadido boton de borrado con evento y reorganizado song-list.js en song-list-manager y song-list-events

--- a/src/scss/_songs-list.scss
+++ b/src/scss/_songs-list.scss
@@ -29,7 +29,8 @@
 				margin-bottom: 10px;
 			}
 		}
-		.favorite-button {
+		.delete-button {
+			cursor: pointer;
 			float: right;
 			margin: 20px 10px 0 0;
 			@include if-is-tablet {
