Añadimos la generacion de sprites al gulpfile y lo aplicamos.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,11 +2,16 @@
 @import "reset";
 @import "clearfix";
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:400,700';
+@import 'sprite';
 @import "variables";
 @import "html-tags";
 @import "web-header";
 @import "songs-list";
 @import "ui-states";
+@include sprites($spritesheet-sprites);
 
+.sprite {
+	display: inline-block;
+}
 
 
