--- a/src/scss/_html-tags.scss
+++ b/src/scss/_html-tags.scss
@@ -82,14 +82,13 @@ button {
 //Mover este estilo a un partial aparte
 .drop-zone {
 	@extend input;
-	//background-color:$color-grey;
-	background-color:red;
+	background-color:$color-grey;
 	text-align: center;
 	text-transform: uppercase;
 	transition: all 0.25s;
 	font-size: $font-size-small;
 	&.drop-here {
-		background: lighten($color-sirena, 20%);
+		background-color: lighten($color-sirena, 20%);
 	}	
 }
 
